--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,6 +1,7 @@
 // config
 @import "config/global";
 @import "config/variables";
+@import "config/mixins";
 
 // components
 @import "components/button";
